<resources>
    <string name="app_name">AJR-22012018-WORKAROUND-INTENTS</string>
    <string name="action_settings">Settings</string>
    <string name="master_page_title_show_text">An Android application for working with intents.\nDated : 22-Jan-2018 07:00 PM \n</string>
    <string name="show_other_activity">Show Other Activity</string>
    <string name="run_a_service">Run a Service!</string>
    <string name="show_hello_world">Show Hello World</string>
    <string name="show_ps_home_page">Show PS Home Page</string>
    <string name="exit">Exit</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="title_activity_show_hello_world">ActivityShowHelloWorld</string>
    <string name="title_activity_target_pending_intent">ActivityTargetPendingIntent</string>
    <string name="create_pending_intent">Create Pending Intent</string>
    <string name="empty_extras">Empty Extras</string>
    <string name="access_wallpaper_control_panel">Access Wallpaper Control Panel</string>
    <string name="intent_data_matching_tests">Data Tests - Intent Matching</string>
    <string name="title_activity_data_matching">DataActivityMatching</string>
    <string name="title_activity_data_path_matching">DataPathMatchingActivity</string>
    <string name="monitor_battery_status">Monitor Battery Status</string>
    <string name="show_activity_in_5_seconds">Show activity in 5 seconds</string>
    <string name="browser_test">Browser - Test</string>
    <string name="phone_dial_test">Phone Dial - Test</string>
    <string name="capture_a_pic">Capture a pic!!!</string>
    <string name="select_a_contact">Select a contact!!!</string>
</resources>
