<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.workaround.ajeesh.ajr_22012018_workaround_intents.IntentMasterActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuShowOtherActivity"
        android:title="@string/show_other_activity" />
    <item
        android:id="@+id/menuRunService"
        android:title="@string/run_a_service" />
    <item
        android:id="@+id/menuShowHelloWorld"
        android:title="@string/show_hello_world" />
    <item
        android:id="@+id/menuShowPSHomePage"
        android:title="@string/show_ps_home_page" />
    <item
        android:id="@+id/menuCreatePendingIntents"
        android:title="@string/create_pending_intent" />
    <item
        android:id="@+id/menuShowWallpaperControlPanel"
        android:title="@string/access_wallpaper_control_panel" />
    <item
        android:id="@+id/menuDataMatchingIntent"
        android:title="@string/intent_data_matching_tests" />
    <item
        android:id="@+id/menuMonitorBatteryStatus"
        android:title="@string/monitor_battery_status" />
    <item
        android:id="@+id/menuShowActivityIn5Seconds"
        android:title="@string/show_activity_in_5_seconds" />
    <item
        android:id="@+id/menuOpenBrowserContent"
        android:title="@string/browser_test" />
    <item
        android:id="@+id/menuOpenPhoneDial"
        android:title="@string/phone_dial_test" />
    <item
        android:id="@+id/menuTakePicture"
        android:title="@string/capture_a_pic" />
    <item
        android:id="@+id/menuFindContact"
        android:title="@string/select_a_contact" />
    <item
        android:id="@+id/menuQuit"
        android:title="@string/exit" />
</menu>
